[package]
name = "sensorial"
version = "0.1.0"
authors = ["gabriel.a <arrudagates@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openlimits = "*"
tokio = { version = "1", features = ["full"] }
futures = "*"
nash-native-client = { version = "=0.1.21", default-features = false, features = ["rustcrypto"] }
dotenv = "*"
lazy_static = "*"
rust_decimal = "*"
